[metadata]
name = maestro
version = attr: maestro._version.__version__
description = Exploring the use of machine learning in music creation.
author = Vedant Varshney
license = MIT
license_file = LICENSE

[options]
packages =
    maestro
install_requires =
    numpy>=1.0
    pandas>=1.0
    matplotlib>=3.0
    tensorflow-macos>=2.5
    tqdm>=4.0
    PyYAML>=6.0
    statsmodels>=0.1
    scikit-learn>=1.0
    scipy>=1.0
python_requires = >=3.6
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    tox>=3.0

[options.package_data]
maestro = py.typed